--- a/v3/data/options/index.css
+++ b/v3/data/options/index.css
@@ -5,17 +5,15 @@ body {
   color: #4d5156;
   margin: 10px;
 }
-select,
 button,
 input[type=submit],
 input[type=button] {
-  height: 24px;
   color: #444;
   background-image: linear-gradient(rgb(237, 237, 237), rgb(237, 237, 237) 38%, rgb(222, 222, 222));
   box-shadow: rgba(0, 0, 0, 0.08) 0 1px 0, rgba(255, 255, 255, 0.75) 0 1px 2px inset;
   text-shadow: rgb(240, 240, 240) 0 1px 0;
+  padding: 5px;
 }
-select,
 button,
 textarea,
 input {
@@ -34,6 +32,9 @@ input[type=text],
 input[type=number] {
   padding: 5px;
   outline: none;
+}
+input[type=number] {
+  width: 5ch;
 }
 textarea:focus,
 input[type=text]:focus,
@@ -58,17 +59,19 @@ code {
 .one {
   display: grid;
   grid-gap: 5px;
-  margin-bottom: 20px;
 }
 .two {
   display: grid;
-  grid-template-columns: min-content 1fr;
+  grid-template-columns: 1fr min-content;
   grid-gap: 5px;
   align-items: center;
 }
-.note {
-  background-color: #ffeee2;
-  padding: 10px;
+.two :nth-child(even) {
+  justify-self: end;
+}
+.one,
+.two {
+  margin-bottom: 10px;
 }
 .pack {
   grid-column: 1/3;
