--- a/v3/data/options/index.css
+++ b/v3/data/options/index.css
@@ -53,7 +53,7 @@ input[type=number] {
   padding: 5px;
 }
 input[type=number] {
-  width: 5ch;
+  width: 7ch;
 }
 a,
 a:visited {
@@ -69,6 +69,9 @@ input[type="path"] {
 code {
   background-color: rgba(0, 0, 0, 0.1);
   padding: 2px;
+}
+select {
+  padding: 3px 5px;
 }
 .one {
   display: grid;
