--- a/v3/data/inject/index.css
+++ b/v3/data/inject/index.css
@@ -13,11 +13,24 @@ body {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 13px;
 }
-select {
+simple-list-view {
   width: 100%;
   flex: 1;
   outline: none;
   border: solid 1px #f7ba79;
+  overflow: hidden;
+  background-color: #fff;
+}
+simple-list-view::part(index),
+simple-list-view::part(ext) {
+  justify-self: center;
+}
+simple-list-view::part(size) {
+  padding-inline-end: 1ch;
+}
+simple-list-view::part(ext),
+simple-list-view::part(size) {
+  color: #8f4900;
 }
 option {
   padding: 3px 5px;
